--- a/themes/jamstackthemes/theme.toml
+++ b/themes/jamstackthemes/theme.toml
@@ -1,8 +1,8 @@
-name = "JAMstack Themes"
+name = "Mozayc Jamstack Alpha Themes"
 license = "MIT"
-description = "A list of Themes and Starters for JAMstack Sites."
+description = "A list of Themes and Starters for MOZAYC-JAMstack Sites."
 min_version = 0.51
 
 [author]
-  name = "JAMstack Themes"
-  homepage = "https://www.jamstackthemes.dev"
+  name = "MOZAYC-JAMstack Themes"
+  homepage = "https://www.mozayc.io"
